--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ omegaconf==2.3.0
 opencv_python==4.7.0.72
 pandas==2.0.1
 Pillow==9.5.0
-torch==1.7.1
-torchvision==0.8.2
+# torch==1.7.1
+# torchvision==0.8.2
 pydicom==2.4.3
 torchvision==0.8.2
 albumentations==0.5.2
