--- a/config/semantic_seg.yaml
+++ b/config/semantic_seg.yaml
@@ -32,8 +32,11 @@ train:
 
   # Losses
   losses:
-    ce:
-      weight: 0.5
+    combo_loss:
+      weights:
+        bce: 3
+        dice: 1
+        focal: 4
       params:  # ~ means None type, the initial params of loss could be identified here
         ignore_index: 255
       label_one_hot: False
@@ -50,7 +53,7 @@ train:
   scheduler_name: 'cosine'
 
   # Runner
-  max_iter: 300000
+  max_iter: 15000
   log_iter: 500
   eval_iter: 2000
   runner_name: 'sem_runner'
