--- a/config/semantic_seg.yaml
+++ b/config/semantic_seg.yaml
@@ -37,7 +37,7 @@ train:
         bce: 3
         dice: 1
         focal: 4
-      # params:  # ~ means None type, the initial params of loss could be identified here
+      params: ~  # ~ means None type, the initial params of loss could be identified here
       #   ignore_index: 255
       # label_one_hot: False
 
